1.txt file updated

--- a/index.html
+++ b/index.html
@@ -160,4 +160,7 @@ window.onclick = function(event) {
 </script>
 </body> </html> </script>
 </body>
-</html>
+</html> </script> </html> </body>
+
+:wq
+
